small fix (inefficient boolean constructor)